Bug 328918 - Context menu item "copy selected to clipboard" copies all result items
Summary: Context menu item "copy selected to clipboard" copies all result items
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: search (other bugs)
Version First Reported In: 2.7.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Bikadorov
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2013-12-17 20:35 UTC by Cade
Modified: 2019-03-02 05:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cade 2013-12-17 20:35:18 UTC
Context menu item "copy selected to clipboard" does not work as expected


Reproducible: Always

Steps to Reproduce:
1. Open Krusader.
2. Menu Tools -> Search.
3. Current tab: "General".
4. Enter something text in "Search for" field.
5. Press "Search" button.
6. Current tab: "Results".
7. Select one or more files.
8. Choose context menu item "copy selected to clipboard".
Actual Results:  
All file names will be copied to clipboard.

Expected Results:  
Copy to clipboard only selected file names
or file under cursor (if no selection).
Comment 1 Toni Asensi Esteve 2018-06-17 21:41:52 UTC
It still happens nowadays.
Comment 2 Alex Bikadorov 2019-02-17 20:05:53 UTC
Pending fix: https://phabricator.kde.org/D19104
Comment 3 Alex Bikadorov 2019-02-24 17:07:19 UTC
Git commit 879514142caf9e9e8fe4298b8b22d9324dcb8d9e by Alexander Bikadorov.
Committed on 24/02/2019 at 16:59.
Pushed by abikadorov into branch 'master'.

Search: Fix copy-to-clipboard action to only copy selected items

FIXED: [ 328918 ] Context menu item "copy selected to clipboard" copies all result items

M  +4    -2    krusader/Search/krsearchdialog.cpp

https://commits.kde.org/krusader/879514142caf9e9e8fe4298b8b22d9324dcb8d9e
Comment 4 Nikita Melnichenko 2019-03-02 05:19:25 UTC
Git commit 0ee73d92036fa8fedde35622219b6a372d911988 by Nikita Melnichenko.
Committed on 01/03/2019 at 09:28.
Pushed by melnichenko into branch 'stable'.

Search: Fix copy-to-clipboard action to only copy selected items
Search: Improve right-click context menu

FIXED: [ 328918 ] Context menu item "copy selected to clipboard" copies all result items

Differential Revision: https://phabricator.kde.org/D19104

(cherry picked from commit 764244391496e3eb2bcab2692dfb4ab5928de7d5)

M  +15   -11   krusader/Panel/PanelView/krview.cpp
M  +1    -1    krusader/Panel/PanelView/krview.h
M  +5    -7    krusader/Panel/panelcontextmenu.cpp
M  +1    -2    krusader/Panel/panelfunc.cpp
M  +46   -37   krusader/Search/krsearchdialog.cpp
M  +10   -3    krusader/Search/krsearchdialog.h

https://commits.kde.org/krusader/0ee73d92036fa8fedde35622219b6a372d911988