Search: Fix copy-to-clipboard action to only copy selected items

FIXED: [ 328918 ] Context menu item "copy selected to clipboard" copies all result items
BUG: 328918